# PoolSim

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.in  README.md  compare.cpp  compare.h  config.json  configure  event.cpp  event.h  eventqueue.cpp  eventqueue.h  main.cpp  makefile  miner.cpp  miner.h  mining_pool.cpp  mining_pool.h  miningpool.cpp  miningpool.h  reward_scheme.h  share_events.cpp  share_events.h  simulation.cpp  simulation.h  simulator.cpp  simulator.h
.circleci/: config.yml
cmake/: FindCli.cmake  FindFastCppCsvParser.cmake  FindNlohmannJson.cmake  FindSpdlog.cmake
examples/multi-miners/: pplns-pool.json  qb-pool-share-donation.json  qb-pool.json
examples/multi-pools/: qb-pool-loss-hopping-large.json  qb-pool-loss-hopping-small.json  qb-pool-luck-frequent-hopping.json  qb-pool-luck-hopping.json  qb-pools.json
examples/two-miners/: pplns-pool.json  pps-pool.json  qb-pool-multiple-addresses.json  qb-pool-share-donation.json  qb-pool-witholding.json  qb-pool.json
examples/two-miners/miners/: benign.csv  multiple_addresses.csv  share_donation.csv  witholding.csv
libpoolsim/: CMakeLists.txt  Makefile  block_event.cpp  block_event.h  btc_param_handler.cpp  btc_param_handler.h  cli.cpp  cli.h  event.cpp  event.h  event_queue.cpp  event_queue.h  factory.cpp  factory.h  miner.cpp  miner.h  miner_creator.cpp  miner_creator.h  miner_record.cpp  miner_record.h  mining_pool.cpp  mining_pool.h  network.cpp  network.h  network_param_handler.cpp  network_param_handler.h  observer.h  random.cpp  random.h  reward_scheme.cpp  reward_scheme.h  share.cpp  share.h  share_handler.cpp  share_handler.h  simulation.cpp  simulation.h  simulator.cpp  simulator.h
poolsim/: CMakeLists.txt  Makefile  main.cpp
scripts/: get_miner_info.py
src/: default_share_handler.cpp  default_share_handler.h  event.cpp  event.h  event_queue.cpp  event_queue.h  factory.h  main.cpp  miner.cpp  miner.h  miner_creator.cpp  miner_creator.h  miner_record.cpp  miner_record.h  mining_pool.cpp  mining_pool.h  observer.h  qb_sort_obj.cpp  qb_sort_obj.h  queue_based.h  random.cpp  random.h  reward_scheme.cpp  reward_scheme.h  share.cpp  share.h  share_events.h  share_handler.cpp  share_handler.h  simulation.cpp  simulation.h  simulator.cpp  simulator.h
tests/: CMakeLists.txt  Makefile  poolsim_test.cpp
tests/fixtures/: sample_miners.csv
